--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -24,10 +28,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /*display: flex;*/
+  background-color: white;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  align-self: center;
+  color: #1a1a1a;
 }
 
 h1 {
