--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,30 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -39,4 +21,128 @@
 
 .read-the-docs {
   color: #888;
+}
+
+/* App.css */
+
+body {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #4caf50, #1e88e5);
+  transition: background 1.5s ease-in-out; /* Transición suave para el fondo */
+}
+
+body:hover {
+  background: linear-gradient(135deg, #1e88e5, #4caf50); /* Cambiar el gradiente al pasar el mouse */
+}
+
+.shadow-2xl {
+  /*width: 100%; /* Ajuste de ancho para hacer el formulario más amplio */
+  /*max-width: none; /* No establecer un max-width para permitir el 200% */
+  padding: 20px;
+  margin: 0; /* Eliminar el margin */
+  background-color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  transform: translateX(-50%); /* Centrar el formulario */
+  left: 50%; /* Mover el elemento al 50% del contenedor */
+  position: relative; /* Necesario para el transform */
+  transition: all 0.3s ease-in-out;
+  opacity: 0.95;
+  align-items: center;
+  padding: 1rem;
+  text-align: left;
+}
+
+.fade-in {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade-in.show {
+  opacity: 1;
+}
+
+
+.shadow-2xl:hover {
+  transform: translateX(-50%) scale(1.0019); /* Centrar y escalar al mismo tiempo */
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+  opacity: 1;
+}
+
+.text-4xl {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #1e88e5;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.MuiFormControl-root {
+  width: 100%;
+}
+
+.MuiButton-root {
+  background-color: #1e88e5;
+  color: white;
+}
+
+.MuiButton-root:hover {
+  background-color: #4caf50;
+}
+
+.MuiFormControl-root .MuiInputLabel-root,
+.MuiTextField-root label,
+.MuiFormControl-root .MuiInputBase-root,
+.MuiTextField-root .MuiInputBase-root {
+  transition: all 0.3s;
+}
+
+.MuiTextField-root label.Mui-focused,
+.MuiFormControl-root label.Mui-focused,
+.MuiTextField-root .MuiInputBase-root:hover fieldset,
+.MuiFormControl-root .MuiInputBase-root:hover fieldset {
+  color: #1e88e5;
+  border-color: #1e88e5;
+}
+
+/* Ajuste de color de los inputs y etiquetas */
+input,
+select,
+label {
+  font-weight: 400;
+  color: #555;
+}
+
+/* Agrega un efecto de foco */
+input:focus,
+select:focus {
+  outline: 2px solid #4caf50;
+  border-color: #1e88e5;
+}
+
+/* Ajustes específicos para formularios */
+form {
+  padding: 1.5rem;
+}
+
+button {
+  width: 10rem;
+  margin-top: 1rem;
+  padding: 0.5rem 1.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #4caf50;
+  color: white;
 }
